src/objects/Deleted_Record__c.object
<CustomObject>
    <fields>
        <fullName>Deleted_Record_Id__c</fullName>
        <label>Deleted Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YayPay_Last_Sync_Date__c</fullName>
        <label>YayPay Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <label>Deleted Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deleted Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deleted Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>